--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
   <meta charset="utf-8">
   <title>Module 4 Solution Starter</title>
   <script>
-    var names = []; // DO NOT REMOVE
+    var names = ["varsan","jega","jaswanth","goms","Jeba starlin"]; 
+    for(let i=0;i<names.length;i++){
+        if(names[i][0]=='J' || names[i][0]=='j'){
+            console.log("Goodbye J"+names[i]);
+        }
+        else{
+            console.log("Hello "+names[i]);
+        }
+    }
   </script>
-  <script src="SpeakHello.js"></script>
-  <script src="SpeakGoodBye.js"></script>
-  <script src="script.js"></script>
 </head>
 <body>
   <h1>Module 4 Solution Starter</h1>
