--- a/index.html
+++ b/index.html
@@ -3,19 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Module 4 Solution Starter</title>
-  <script>
-    var names = ["varsan","jega","jaswanth","goms","Jeba starlin"]; 
-    for(let i=0;i<names.length;i++){
-        if(names[i][0]=='J' || names[i][0]=='j'){
-            console.log("Goodbye J"+names[i]);
-        }
-        else{
-            console.log("Hello "+names[i]);
-        }
-    }
-  </script>
+  <script src="js/SpeakHello.js"></script>
+  <script src="js/SpeakGoodBye.js"></script>
+  <script src="js/script.js"></script>
 </head>
 <body>
-  <h1>Module 4 Solution Starter</h1>
+  <h1>Module 4 Solution </h1>
+  <p> Open the console to see the output</p>
 </body>
 </html>
